Bug 391607 - Crash when trying to disable the 3.3 painting pack.
Summary: Crash when trying to disable the 3.3 painting pack.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2018-03-09 12:15 UTC by wolthera
Modified: 2018-03-10 07:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Boud's patch. (4.87 KB, patch)
2018-03-09 21:43 UTC, wolthera
Details

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2018-03-09 12:15:28 UTC
Application: krita (4.1.0-pre-alpha (git 7bfd582))

Qt Version: 5.10.0
Frameworks Version: 5.43.0
Operating System: Linux 4.13.0-36-generic x86_64
Distribution: KDE neon User Edition 5.12

-- Information about the crash:
- What I was doing when the application crashed:
I tried to distable the Krita 3.3.3 painting pack.

- Custom settings of the application:

I already had a bundle blacklist file in my resources, and hadn't reset my kritarc.

---------------

<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE m_blackListFile>
<resourceFilesList>
 <file>
  <name>~/.local/share/krita/bundles/Wolthera_Painting_Pack.bundle</name>
 </file>
 <file>
  <name>~/.local/share/krita/bundles/Wolthera_Doodle_Pack.bundle</name>
 </file>
 <file>
  <name>~/.local/share/krita/bundles/Wolthera_SFX_Pack.bundle</name>
 </file>
</resourceFilesList>

-- Backtrace:
Application: Krita (krita), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fca45f58900 (LWP 25356))]

Thread 4 (Thread 0x7fca067bc700 (LWP 25361)):
#0  0x00007fca428d274d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007fca3aaeb38c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fca3aaeb49c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fca4341b5cb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007fca433c264a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fca431e2554 in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fca23cd0a35 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#7  0x00007fca431e76eb in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007fca3c3536ba in start_thread (arg=0x7fca067bc700) at pthread_create.c:333
#9  0x00007fca428de41d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 3 (Thread 0x7fca05fbb700 (LWP 25360)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007fca431e867b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#2  0x00007fca431e11ef in QSemaphore::tryAcquire(int, int) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#3  0x00007fca40475133 in KisTileDataSwapper::waitForWork (this=<optimized out>) at /home/wolthera/krita/src/libs/image/tiles3/swap/kis_tile_data_swapper.cpp:86
#4  0x00007fca4047532a in KisTileDataSwapper::run (this=0x7fca40972f80 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder+64>) at /home/wolthera/krita/src/libs/image/tiles3/swap/kis_tile_data_swapper.cpp:92
#5  0x00007fca431e76eb in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fca3c3536ba in start_thread (arg=0x7fca05fbb700) at pthread_create.c:333
#7  0x00007fca428de41d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7fca1e9ef700 (LWP 25358)):
#0  0x00007fca3ab2fa79 in g_mutex_lock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007fca3aaeab41 in g_main_context_query () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fca3aaeb307 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fca3aaeb49c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fca4341b5cb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fca433c264a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fca431e2554 in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007fca3c57f2c5 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5DBus.so.5
#8  0x00007fca431e76eb in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#9  0x00007fca3c3536ba in start_thread (arg=0x7fca1e9ef700) at pthread_create.c:333
#10 0x00007fca428de41d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7fca45f58900 (LWP 25356)):
[KCrash Handler]
#6  QString::QString (other=<error reading variable: Cannot access memory at address 0x8>, this=this@entry=0x7fffb7a9ae70) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qstring.h:941
#7  KoResource::filename (this=this@entry=0x0) at /home/wolthera/krita/src/libs/pigment/resources/KoResource.cpp:100
#8  0x00007fc9f52f6ff7 in DlgBundleManager::accept (this=0x17786960) at /home/wolthera/krita/src/plugins/extensions/resourcemanager/dlg_bundle_manager.cpp:180
#9  0x00007fca40056b05 in KoDialog::slotButtonClicked (this=0x17786960, button=4) at /home/wolthera/krita/src/libs/widgets/KoDialog.cpp:918
#10 0x00007fca40057097 in KoDialog::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /home/wolthera/krita/build/libs/widgets/moc_KoDialog.cpp:284
#11 0x00007fca433f1489 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#12 0x00007fca433fba4e in QSignalMapper::mapped(int) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#13 0x00007fca433fd12c in QSignalMapper::map(QObject*) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#14 0x00007fca433f1489 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#15 0x00007fca441fb9e2 in QAbstractButton::clicked(bool) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#16 0x00007fca441fbc14 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#17 0x00007fca441fd8be in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#18 0x00007fca441fda3d in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#19 0x00007fca44143f88 in QWidget::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#20 0x00007fca44104acc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#21 0x00007fca4410d03b in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#22 0x00007fca4581f817 in KisApplication::notify (this=<optimized out>, receiver=0x174616b0, event=0x7fffb7a9b7d0) at /home/wolthera/krita/src/libs/ui/KisApplication.cpp:601
#23 0x00007fca433c43c8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#24 0x00007fca4410b9df in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#25 0x00007fca4415df4d in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#26 0x00007fca4416097b in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#27 0x00007fca44104acc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#28 0x00007fca4410c417 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#29 0x00007fca4581f817 in KisApplication::notify (this=<optimized out>, receiver=0x170db500, event=0x7fffb7a9bc50) at /home/wolthera/krita/src/libs/ui/KisApplication.cpp:601
#30 0x00007fca433c43c8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#31 0x00007fca4395cef0 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#32 0x00007fca4395ee45 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#33 0x00007fca439388fb in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#34 0x00007fca2d2031ab in ?? () from /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#35 0x00007fca433c264a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#36 0x00007fca442f3627 in QDialog::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#37 0x00007fca433f1489 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#38 0x00007fca440fe4a2 in QAction::triggered(bool) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#39 0x00007fca44100c10 in QAction::activate(QAction::ActionEvent) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#40 0x00007fca4428164a in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#41 0x00007fca44288ae6 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#42 0x00007fca44289a80 in QMenu::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#43 0x00007fca44143f88 in QWidget::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#44 0x00007fca4428bf83 in QMenu::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#45 0x00007fca44104acc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#46 0x00007fca4410d03b in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#47 0x00007fca4581f817 in KisApplication::notify (this=<optimized out>, receiver=0x11085a30, event=0x7fffb7a9c6f0) at /home/wolthera/krita/src/libs/ui/KisApplication.cpp:601
#48 0x00007fca433c43c8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#49 0x00007fca4410b9df in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#50 0x00007fca4415e350 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#51 0x00007fca4416097b in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#52 0x00007fca44104acc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#53 0x00007fca4410c417 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#54 0x00007fca4581f817 in KisApplication::notify (this=<optimized out>, receiver=0x133be890, event=0x7fffb7a9cb70) at /home/wolthera/krita/src/libs/ui/KisApplication.cpp:601
#55 0x00007fca433c43c8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#56 0x00007fca4395cef0 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#57 0x00007fca4395ee45 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#58 0x00007fca439388fb in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#59 0x00007fca2d2031ab in ?? () from /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#60 0x00007fca433c264a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#61 0x00007fca433cb854 in QCoreApplication::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#62 0x00000000004054d3 in main (argc=1, argv=0x7fffb7a9d488) at /home/wolthera/krita/src/krita/main.cc:349

Reported using DrKonqi
Comment 1 wolthera 2018-03-09 21:43:19 UTC
Created attachment 111290 [details]
Boud's patch.

So, boud's patch he posted on irc yesterday actually fixes this(on top of the other issue). Just posting this comment+patch here so that it'll be remembered.
Comment 2 Halla Rempt 2018-03-10 07:58:59 UTC
Git commit e2f7a878a32194f0a290cc7fc60a94ea5ffd7457 by Boudewijn Rempt.
Committed on 10/03/2018 at 07:58.
Pushed by rempt into branch 'master'.

Fix issues with disabling/enabling the 3.0 default bundle
Related: bug 391586

M  +1    -1    libs/widgets/KoResourceServer.h
M  +44   -31   plugins/extensions/resourcemanager/dlg_bundle_manager.cpp

https://commits.kde.org/krita/e2f7a878a32194f0a290cc7fc60a94ea5ffd7457
Comment 3 Halla Rempt 2018-03-10 07:59:15 UTC
Git commit 160ab699ba123dcd3a6941fdbebf15ad8bb88ccb by Boudewijn Rempt.
Committed on 10/03/2018 at 07:59.
Pushed by rempt into branch 'krita/4.0'.

Fix issues with disabling/enabling the 3.0 default bundle
Related: bug 391586
(cherry picked from commit bef372299dcef1199c496f1a586abf3cafcd356e)

M  +1    -1    libs/widgets/KoResourceServer.h
M  +44   -31   plugins/extensions/resourcemanager/dlg_bundle_manager.cpp

https://commits.kde.org/krita/160ab699ba123dcd3a6941fdbebf15ad8bb88ccb