Fix issues with disabling/enabling the 3.0 default bundle

BUG:391607
BUG:391586
(cherry picked from commit bef372299dcef1199c496f1a586abf3cafcd356e)